[package]
name = "user_acc"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3.0.0", default-features = false }
ink_lang = { version = "3.4.0" }
ink_storage = { version = "4.1.0" }
ink_engine = { version = "^4.1.0" }



[dev-dependencies]
ink_e2e = "4.0.1"
secp256k1 = "0.27.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
